# track_vehicles

./: .gitignore  README.md  capture_manager.py  config.json  config.py  detector.py  line_counter.py  main.py  motion_detector.py  requirements.txt  run.py  tracker.py  web_server.py
models/: nanodet.onnx
models/yolo26n_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
rust_port/: Cargo.toml  build.rs  build_pi.sh
rust_port/src/: annotate.rs  capture.rs  config.rs  detector.rs  detector_ncnn.rs  detector_ort.rs  line_counter.rs  main.rs  motion.rs  ncnn_wrapper.rs  python_tracker.rs  server.rs  tracker.rs  types.rs
rust_port/templates/: analytics.html  index.html
templates/: captures.html  index.html
test/: run_test.sh  test_config.json
