[package]
name = "vehicle_counter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
async-stream = "0.3"
opencv = "0.99"
