[package]
name = "vehicle_counter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-stream = "0.3"
opencv = { version = "0.99", features = ["imgcodecs", "imgproc", "video", "videoio"] }
