[package]
name = "vehicle_counter"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
opencv = { version = "0.99", features = ["imgcodecs", "imgproc", "video", "videoio"] }
jamtrack-rs = { path = "/tmp/jamtrack-rs" }
ort = { version = "2.0.0-rc.12", features = ["ndarray", "download-binaries"] }
